        Reviewed by Mark and Olliver.

- http://bugs.webkit.org/show_bug.cgi?id=13352  REGRESSION: Gmail hangs on send message.
        - Now we don't hang, but we do so by avoiding certain legitimate characters, the evangelism bug for this is: <rdar://problem/5252577> gmail does not accept legal characters in the form boundary

        * html/HTMLFormElement.cpp:
        (WebCore::getUniqueBoundaryString):



Canonical link: https://commits.webkit.org/18309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@22013 268f45cc-cd09-0410-ab3c-d52691b4dbfc